# taigi-flow

./: .env.example  .gitignore  .gitmodules  AGENT.md  CLAUDE.md  Dockerfile  GETTING_STARTED.md  PLAN.md  README.md  dev.sh  docker-compose.yml  pnpm-lock.yaml  prod.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: admin-guide.md  phase-1-report.md  plan.md
docs/adr/: 000-adr-mechanism.md  001-sliding-window-memory.md  002-asr-dual-backend.md  003-postgres-over-env.md  004-barge-in-vad-suppression.md
infra/: livekit.yaml
infra/piper/: Dockerfile
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: taigi-flow.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
qwen-asr-server/: Dockerfile  Dockerfile.gpu  server.py
scripts/: _lib.sh  download_piper_model.sh  setup_ollama.sh
src/taigi_flow/: __main__.py  agent.py  bootstrap.py  config.py  factory.py  main.py  protocols.py  text_safety.py
src/taigi_flow/converter/: hanlo_bridge.py  passthrough.py
src/taigi_flow/llm/: __init__.py  ollama.py
src/taigi_flow/monitoring/: __init__.py  dashboard.py  metrics.py  traces.py
src/taigi_flow/prompts/: __init__.py  agent_instructions.md  greeting_instructions.md
src/taigi_flow/session/: state.py
src/taigi_flow/stt/: funasr.py  qwen_asr.py  qwen_http.py
src/taigi_flow/tools/: livekit_token.py
src/taigi_flow/tts/: piper.py
tasks/: README.md  phase-0-infrastructure.md  phase-1-text-pipeline.md  phase-2-voice-layer.md  phase-3-integration.md  phase-4-barge-in.md  phase-5-admin-panel.md  phase-6-rag-tools.md  phase-6.4-bus-data.md  phase-6.5-map.md  phase-7-polish.md  phase-8-otp-routing.md
tests/: test_agent.py  test_bootstrap.py  test_config.py  test_factory.py  test_hanlo_bridge.py  test_livekit_token.py  test_main.py  test_ollama_llm.py  test_piper_synthesizer.py  test_qwen_asr.py  test_session_state.py  test_text_safety.py
web/: package.json  pnpm-lock.yaml
web/.husky/: commit-msg  pre-commit
web/apps/admin/: eslint.config.mjs  next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/apps/playground/: package.json  tsconfig.tsbuildinfo
worker/: README.md  dispatch_test.py  pyproject.toml
worker/pipeline/: tts.py
worker/tests/: conftest.py  test_barge_in.py  test_db_smoke.py  test_fallback.py  test_interaction_log.py  test_llm.py  test_memory.py  test_metrics.py  test_runner_errors.py  test_splitter.py  test_text_processor.py  test_tools.py  test_vad_thresholds.py  test_voice_controller.py
worker/worker/: cli.py  main.py  rag_server.py
worker/worker/audio/: fallback.py  processor.py  vad.py  voice_controller.py
worker/worker/db/: models.py  repositories.py  session.py  time.py
worker/worker/ingest/: __main__.py  chunker.py  embedder.py  runner.py
worker/worker/observability/: metrics.py
worker/worker/pipeline/: llm.py  memory.py  rag.py  realtime.py  splitter.py  text_processor.py  tts.py
worker/worker/pipeline/asr/: base.py  breeze.py  qwen3.py
worker/worker/scripts/: import_bus.py  latency_summary.py
worker/worker/session/: components.py  data_channel.py  runner.py
worker/worker/tools/: __init__.py  base.py  bus.py  geo.py  tdx_realtime.py
(+63 files in other folders)
